# Lamed

./: .aiignore  .gitignore  ARCHITECTURE.md  Dockerfile  FIRESTORE_SCHEMA.md  README.md  angular.json  docker-compose.yml  firebase.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
.firebase/: hosting.ZGlzdFxhbmd1bGFyLWxhbWVkXGJyb3dzZXI.cache
.github/workflows/: deploy.yml  update-videos.yml
Projeto Base/: Lamed novo.code-workspace  README.md  fetch-videos.js  firebase.json  package.json
Projeto Base/_BKPs/: 404.html  articles.json  artigos.html  desafios.html  desafios.js  doacao.html  index.html  materiais.html  materiais.js  planos.html  politica-de-privacidade.html  script.js  sobre.html  style.css  termos-de-uso.html  videos.html  videos.json
Projeto Base/public/: article-loader.js  articles.json  artigo.html  artigos.html  desafios.html  desafios.js  doacao.html  index.html  materiais.html  materiais.js  planos.html  politica-de-privacidade.html  robots.txt  script.js  sobre.html  (+5 more)
backend/: README.md  db.sqlite3  main.py  pyproject.toml
backend/api/: artigos.py  dependencies.py  guiasEstudo.py  router.py  schemas.py
backend/config/: authentificator.py  settings.py
backend/content/: models.py  utils.py
backend/content/migrations/: 0001_initial.py  0002_lessonbundle.py
backend/scripts/: migrate_content.py
frontend/: .dockerignore  .firebaserc  angular.json  build_out.txt  karma.conf.js  package-lock.json  package.json  test_log.txt
functions/: index.js  package.json
scripts/: package-lock.json
src/: index.html  styles.css
(+205 files in other folders)
