[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "firebase-admin>=6.0.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.6",
]
